@@ -1,8 +1,8 @@
 AUX MAKEDEV 51166 RMD160 8a2b3d9007223612f7f9c57968b575b63161c662 SHA1 731deffb2f31770a3ac70ff65b5a94e2366bc794 SHA256 41e3e4612d8640082fb80fee4789a589f60a3259878a5730b529b340e0ad513d
-AUX bash_logout 59 RMD160 5702139c2826597861d7e6bc3f5f4f7f12d51574 SHA1 1cf886032488af684da129e2d50ead512c28d501 SHA256 9bf0fd14167af7858de5b3198af58416f0e19d9470a8cc9f1eb72e97052c64f7
 DIST baselayout-2.1.8.tar.bz2 22782 RMD160 ef12eeb7d2310dc11127af024ddf52df7fa0e3c1 SHA1 b6393ebd77ffd4ec7c9f4c94b10f46420e9f6ef7 SHA256 4a5c68cc8b190fd2fbf2c9cfc058dc9790c10fce7a3904ba0cc4fd756f6e3e53
 DIST realdev-1.0.tar.bz2 2171 RMD160 ec5555528054967fa36cf46e59ab83e2da5dd7b7 SHA1 f2abdee150d2a2374ff779868cbed1de23403968 SHA256 2173eff1afc883e6e42f51087bd0d6a3035faaaa3c93a4f8f5ddcc49f8b8aaa3
 EBUILD baselayout-2.1.8-r1.ebuild 7375 RMD160 654cea881706797ef035fe0e489d46229b0fa0b7 SHA1 19f391d09b96c8be0f0d89372da6512e85fef6d1 SHA256 a2b9f171aae1bf4d9231a138e79a175c3c69cda49cd17f548be3996f8a005961
+EBUILD baselayout-2.1.8-r2.ebuild 7401 RMD160 65ab742c18b5f1927cb41431d3b5af5b537b8473 SHA1 4252faf10c91b3bb10e32eaa462a3b295d656d09 SHA256 cadfc4137bc82539d9896d500ffea8302b24bc14fd6b70b2fa808dd3785f49f7
 EBUILD baselayout-2.1.8.ebuild 7316 RMD160 50fe9d53918566e6f9906fd6326397f12018cd08 SHA1 a35b6d796cc0588899e92a1c1242a6511d5a23a7 SHA256 c12a957a09590ca5e9c8ebe5803683dfe9fd80a3f119383b8aa52b0bacc5d284
-MISC ChangeLog 106779 RMD160 bfbbae6e40ca7ce1cde29202d3fbb0efd93cc090 SHA1 9d6f752b275107e6a61e3d5d484b06cb8c2c2ad1 SHA256 9adc191d4db65d9af94748bda61cc4feef9ee45678d0c10af15bc5403b2c091c
+MISC ChangeLog 107090 RMD160 6aaa5a8b3906626638e1385d41c972ef705fb537 SHA1 5186d4873b022e2d4f23e66fe3bcb0005e9c25a7 SHA256 b3a7392ddb9010eeda1b3892eccf7b199465e5cc8372c9a58c725423f8f48f02
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
