@@ -1,4 +1,0 @@
-# root's .bash_logout:
-
-# clear screen for security:
-clear
